--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:./data/todoDB
+spring.datasource.url=jdbc:h2:file:./data/todoDatabase
 spring.datasource.username=name
 spring.datasource.password=password
 spring.sql.init.schema-locations=classpath:schema.sql
